lab1/Test/L1-A-12-59.output
Error Type A at Line 4
Error Type A at Line 6
Error Type B at Line 15
Error Type B at Line 34
Error Type B at Line 64
Error Type B at Line 68
