lab1/Test/L1-A-12-59.cmm
int ;
int ar5GkYLHoZoj ( int CGqdw8Qq93x ) {
  int fw2MrYK1vz0 ;
  int rnqs29uNJ :;
  struct {
    int IV &;
    int wmdclj_c7DG0 ;
    int aE2CAHZCpDU ;
    int vcTslnN5ZwEOFuyC ;
    struct T301K1wzJr1lq3xj4Qy i5qcCYv29ww1YxboPC 
      ;
    struct CxX_dsHdWUtWdJiH6yQ iQ3FR ;
  }Mm_nWp8mseQ ;
  WXAmaFMkD0Lmx7 ;
  ;
  if ( OTWGaoVTmSYByPOe1c )   qvgz4B ;
else {
  }
  if ( SaQ89Be9XkQ4 )   onOUaE ;
else   if ( PTX )   if ( tKTpAP322Zyvg )   if ( bRM1gLv3yLDLrwhfo8z 
    )   while ( VHrk0zmD4Hai )   while ( aO8IwBJm )   e 
    ;


else   if ( Oo1j7ndY4zBlHbmr7 )   SBXVmihzygAd ;
else {
    if ( K57q )     while ( oHBuxZ ) {
      BHezHPu7QdEXT7uBj ;
      if ( HmcIxbB42fX )       hdhjw4LQjlC33Frx9L7_ 
        ;
else       d6DD9XBelC ;

      cYOjBX6gwWE_ 
    }

    tnECZug6o_Ow0TxORCW ;
  }

else   if ( G ) {
    int F ;
    struct dMbVr94tX opY7H78CVpXbjy ;
    return rSXbfZaFc5enxVgvvlT4 ;
  }



  while ( q )   XVwZVVscqIDXwKQV ;

}
int xv6Dz_sGHsdoL , pTdn5fltbzB3z05wCO 

;
struct nToLlTFr {
}B2GeiQne8z8 ( ) {
  float viH , Udyliq9fXaU [ 1619905947 ] = MJaRgTUri_mbphfdCyG 
    >= iEm6xRgLMQryu - P * - jvfXsJa_N [ DpX4n = QAQktkdO0ccDM 
    || X && zW4uWw2lOe != Xj6ad7_SUV / WZDriV ( TRVTXiJV 
    , pr = Bj || FQ <= U3ze1tO9 * VWng7h65bkt05WA6Lc ( 
    Gb0NZmBYMgesYC0G = h1pzKsx3yuVx < tB7ASLwKX2egY0cIx 
    [ V8 > BAYUcjkrcGdox12bIt5 * ( psCnWe4o5pc0ZV * dERK9tjNQymPQA 
    [ ZVCVYc1qI3 && K3p == fq_nv / VwMDVpZ4XUgFrxGN ( 
    xi1ousf_Q_ && KTf_zDXJ8yo - vnT / 2064227134.202707089 
    ) ] ) . PupDRCKmLzth . WYqzzFxDB ] ) . W6LlrqdsjBKUodrfmX 
    / NMwPZnHLg 636675269 . Md ) + ! aEhvRWZ4YFsCcQ ( 
    ) ] ;
}
int 
int ;
int ;
int ;
int Fn8bRmunW2Gxjk7f ( int gp1aex2Af , int SXM7 ) 
  {
}
